header's image overflow is fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ ul {
 	padding: 0;
 }
 
-#home {
+header {
 	background: linear-gradient(rgb(0 0 0 / 70%), rgba(55, 51, 74, 0.7)), url(../images/header-bg.jpg);
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
@@ -120,9 +120,6 @@ footer.container-fluid {
 	z-index: 100;
 	transition: all 0.8s ease 0s;
 	padding: 3.5rem 0;
-}
-
-.sidebar {
 	color: #D9D9D9;
 }
 
@@ -453,7 +450,7 @@ footer.container-fluid {
 
 .contact-info i {
 	float: left;
-	font-size: 2.5rem;
+	font-size: 2.2rem;
 	color: #465FCF;
 }
 
@@ -496,21 +493,33 @@ textarea.form-control {
 
 @media only screen and (min-width: 320px) {
     .mainmenu {
-    	padding-left: 5rem;
-    	padding-right: 5rem;
+    	padding-left: 3rem;
+    	padding-right: 3rem;
     }	 
 
     .mainmenu .expand-sidebar {
-    	right: 4rem;
+    	right: 2rem;
+		font-size: 1.5rem;
+		top: 0.2rem;
     }
 
+	.mainmenu .logo a {
+		font-size: 1.8rem;
+	}
+
 	 .h-intro {
-    	font-size: 2.8rem;
+    	font-size: 2rem;
     }
 
 	 .sidebar {
     	width: 50%;
     }
+
+	.container-fluid {
+		padding-left: 4rem;
+		padding-right: 4rem;
+	}
+	
 }
 
 @media only screen and (min-width: 576px) {
